# xdrzcc

./: .dockerignore  .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md
.devcontainer/: Dockerfile  devcontainer.json  devcontainer.json.license
.github/workflows/: build-test.yml  reuse-compliance.yml  syntax-check.yml
debian/: changelog  control  copyright  files
etc/: uncrustify.cfg
man/: xdrzcc.1
src/: CMakeLists.txt  generate_embedded.sh  xdr.h  xdr.l  xdr.y  xdr_builtin.c  xdr_builtin.h  xdrzcc.c
tests/: CMakeLists.txt  double.c  double.x  enum.c  enum.x  float.c  float.x  nested.c  nested.x  opaque.c  opaque.x  rfc7863.c  rfc7863.x  string.c  string.x  uint32.c  uint32.x  uint32_array.c  uint32_array.x  uint32_vector.c  uint32_vector.x  uint32_vector_one.c  uint32_vector_one.x  union.c  union.x
